--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-<script>
+<script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script>
+  <script src="https://connect.facebook.net/signals/config/205070384764984?v=2.9.40&amp;r=stable" async=""></script>
+  <script>
     !function (f, b, e, v, n, t, s) {
       if (f.fbq) return; n = f.fbq = function () {
         n.callMethod ?
